--- a/index.html
+++ b/index.html
@@ -2,33 +2,35 @@
 <html>
 
 <head>
-  <title>Angular QuickStart (jit version)</title>
+  <title>Ahead of time compilation</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Polyfill(s) for older browsers -->
+  <!-- Polyfill(s) for older browsers
   <script src="node_modules/core-js/client/shim.min.js"></script>
+  -->
+  <script src="dist/shim.min.js"></script>
 
+  <!-- needed scripts for angular
   <script src="node_modules/zone.js/dist/zone.js"></script>
   <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  -->
+  <script src="dist/zone.js"></script>
+  <script src="dist/Reflect.js"></script>
 
-  <!--
-    =====================
-    jit specific scripts
-    =====================
-    -->
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
-  <script src="systemjs.config.js"></script>
-  <script>
-    System.import('app').catch(function(err) {
-      console.error(err);
-    });
-  </script>
+
+
 </head>
 
 <body>
-  <my-app>Loading jit page ...</my-app>
+  <my-app>Loading aot page ...</my-app>
 </body>
+<!--
+  ============================
+  Production (aot) specific
+===========================
+-->
+<script src="dist/build.js"></script>
 
 </html>
