allow local template paths both for jit and aot

--- a/index-aot.html
+++ b/index-aot.html
@@ -18,6 +18,8 @@
   -->
   <script src="dist/zone.js"></script>
   <script src="dist/Reflect.js"></script>
+  <!-- fake commonjs needed to use local template urls with moduleId : module.id -->
+  <script>window.module = 'aot';</script>
 
 
 
