Authentication service implemented

--- a/app/comp/test.html
+++ b/app/comp/test.html
@@ -1,1 +1,5 @@
 <h2>My test login component</h2>
+<input [(ngModel)] = "user" />
+<input [(ngModel)] = "password" />
+<br/>
+<button (click) = "test()">Login</button>
