--- a/index-aot.html
+++ b/index-aot.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <base href="/">
   <title>Ahead of time compilation</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
